@@ -572,25 +572,26 @@ CreateDatabase(void)
 					"ID INTEGER PRIMARY KEY AUTOINCREMENT, "
 					"PATH TEXT DEFAULT NULL, "
 					"SIZE INTEGER, "
+					"TIMESTAMP INTEGER, "
 					"TITLE TEXT COLLATE NOCASE, "
 					"DURATION TEXT, "
 					"BITRATE INTEGER, "
 					"SAMPLERATE INTEGER, "
+					"CREATOR TEXT COLLATE NOCASE, "
 					"ARTIST TEXT COLLATE NOCASE, "
 					"ALBUM TEXT COLLATE NOCASE, "
 					"GENRE TEXT COLLATE NOCASE, "
 					"COMMENT TEXT, "
 					"CHANNELS INTEGER, "
+					"DISC INTEGER, "
 					"TRACK INTEGER, "
 					"DATE DATE, "
 					"RESOLUTION TEXT, "
 					"THUMBNAIL BOOL DEFAULT 0, "
-					"CREATOR TEXT COLLATE NOCASE, "
-					"DLNA_PN TEXT, "
-					"MIME TEXT, "
 					"ALBUM_ART INTEGER DEFAULT 0, "
-					"DISC INTEGER, "
-					"TIMESTAMP INTEGER"
+					"ROTATION INTEGER, "
+					"DLNA_PN TEXT, "
+					"MIME TEXT"
 					")");
 	if( ret != SQLITE_OK )
 		goto sql_failed;
